--- a/Website/static/styles/index-style.css
+++ b/Website/static/styles/index-style.css
@@ -383,9 +383,10 @@ ul {
         text-decoration: none;
         position: relative;
         background-color: #fff;
-        font-size: 22px;
+        font-size: 16px;
         line-height: 1rem;
         font-weight: 500;
+        color: rgb(54, 85, 120);
 }
 
 .navmenu ul li::before {
@@ -404,6 +405,7 @@ ul {
 
 .navmenu ul li.active {
         font-weight: 700;
+        color: black;
 }
 
 .navmenu ul li.active::before {
