--- a/Website/static/styles/loading-style.css
+++ b/Website/static/styles/loading-style.css
@@ -74,9 +74,10 @@
         text-decoration: none;
         position: relative;
         background-color: #fff;
-        font-size: 22px;
+        font-size: 16px;
         line-height: 1rem;
         font-weight: 500;
+        color: rgb(54, 85, 120);
 }
 
 .navmenu ul li::before {
@@ -95,6 +96,7 @@
 
 .navmenu ul li.active {
         font-weight: 700;
+        color: black;
 }
 
 .navmenu ul li.active::before {
