--- a/Website/static/styles/result-style.css
+++ b/Website/static/styles/result-style.css
@@ -1,4 +1,5 @@
 /* Global Stylings */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 *{
         border: 0;
         padding: 0;
@@ -668,4 +669,26 @@ ul {
 
 .navmenu ul li.active::before {
         background: rgb(54, 85, 120);
+}
+
+.logout {
+    display: inline-block;
+    text-align: center;
+    top: 48px;
+    right: 35px;
+    position: absolute;
+}
+
+.logout-button {
+    font-family: "Poppins", sans-serif;
+    color: white;
+    background-color: transparent;
+    text-decoration: underline;
+    font-size: 14px;
+    border: none;
+}
+
+.logout-button:hover {
+    color: rgb(241, 241, 241);
+    cursor: pointer;
 }
