--- a/Website/static/styles/index-style.css
+++ b/Website/static/styles/index-style.css
@@ -214,10 +214,7 @@ body {
     height: 55px;
     position: absolute;
     bottom: 6.5%;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
+    left: 85%;
     cursor: pointer;
 }
 
@@ -233,6 +230,26 @@ body {
 .run-button:disabled:hover {
     background-color: rgb(79, 106, 137);
 }
+
+
+.previous-button {
+        background-color: rgb(54, 85, 120);
+        color: white;
+        border: none;
+        border-radius: 10px;
+        font-weight: 500;
+        font-size: 22px;
+        width: 150px;
+        height: 55px;
+        position: absolute;
+        bottom: 6.5%;
+        left: 10%;
+        cursor: pointer;
+    }
+    
+    .previous-button:hover {
+        background-color: rgb(60, 80, 100);
+    }
 
 footer{
     position: absolute;
