--- a/Website/templates/uploadVideo.html
+++ b/Website/templates/uploadVideo.html
@@ -77,6 +77,9 @@
 
                 <!--Run button-->
                 <div class="run">
+                        <button class="previous-button" id="previous-button" onclick="location.href='uploadImage'">
+                                <b>Previous</b>
+                        </button>
                         <!--onclick location.href to redirect page to loading-->
                         <button class="run-button" id="run-button" onclick="location.href='loading'" disabled>
                                 <b>Next</b>
