--- a/Website/templates/fun.html
+++ b/Website/templates/fun.html
@@ -100,4 +100,16 @@
                 <a href=index>
                     <button type="submit" class="login-button"><b>Login<b></button>
                 </a>
+                <br><br>
+
+                <label for="password"><b>Password</b></label>
+                <br>
+                <input class="text-box" type="password" placeholder="Enter Password" name="password" required {{
+                    request.form.password }}
+                >
+                <br><br><br>
+        
+                <a href=index>
+                    <button type="submit" class="login-button"><b>Login<b></button>
+                </a>
       
